--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -93,6 +93,7 @@ stages:
                     allowTelemetryCollection: false
                   
       - deployment: DeployQAAKSCluster
+        dependsOn: DeployDevAKSCluster
         displayName: DeployQAAKSCluster
         pool:
           vmImage: 'ubuntu-latest'
