--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -6,7 +6,8 @@
 trigger:
 - main
 
-pool: Default
+pool:
+  vmImage: 'ubuntu-latest'
 
 variables:
   - name: DEV_ENVIRONMENT
@@ -52,7 +53,8 @@ stages:
     jobs:
       - deployment: DeployDevAKSCluster
         displayName: DeployDevAKSCluster
-        pool: Default
+        pool: 
+          vmImage: 'ubuntu-latest'
         environment: $(DEV_ENVIRONMENT) 
         strategy:
           runOnce:
@@ -93,7 +95,8 @@ stages:
       - deployment: DeployQAAKSCluster
         dependsOn: DeployDevAKSCluster
         displayName: DeployQAAKSCluster
-        pool: Default
+        pool: 
+          vmImage: 'ubuntu-latest'
         environment: $(QA_ENVIRONMENT) 
         strategy:
           runOnce:
